# ml-ai-weather-climate-training

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  plan.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-03-plot.yml
docker-test/: 03_dockerfile.txt  03_plot_curve.py
notebooks/: rag_openifs.ipynb  scratch.ipynb
