[project]
name = "ml-ai-weather-climate-training"
version = "0.1.0"
description = "ML and AI for Weather, Climate and Environment Training"
readme = "README.md"
requires-python = "==3.11.*"
# Older versions of PyTorch and NumPy required for Intel CPUs
dependencies = [
    "eccodes>=2.45.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "requests>=2.32.5",
    "torchvision>=0.24.1",
    "pip>=25.3",
]
