[project]
name = "ml-ai-weather-climate-training"
version = "0.1.0"
description = "ML and AI for Weather, Climate and Environment Training"
readme = "README.md"
requires-python = "==3.11.*"
# Older versions of PyTorch and NumPy required for Intel CPUs
dependencies = [
    "eccodes>=2.47.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "torch>=2.12.1",
    "requests>=2.34.2",
    "torchvision>=0.24.1",
    "pip>=26.1.2",
    "ipywidgets>=8.1.8",
    "sentence-transformers==5.6.0",
    "faiss-cpu==1.14.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
